Bug 100838 - Photo / image transparency lost in PDF export - regression from 5.1.4.2
Summary: Photo / image transparency lost in PDF export - regression from 5.1.4.2
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-07-10 12:56 UTC by Sean Carlos
Modified: 2016-10-25 18:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple document containing an image where the transparency percentage is set. (126.11 KB, application/vnd.oasis.opendocument.text)
2016-07-10 13:30 UTC, Sean Carlos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sean Carlos 2016-07-10 12:56:02 UTC
During the PDF export of a document containing an image (photo) which has a transparency percentage value (set using the image toolbar) the transparency is lost.

The transparency is maintained in the PDF export in earlier versions, such as LibreOffice_5.1.4.2_Linux_x86-64 but it no longer works in LibreOffice_5.2.0.1_Linux_x86-64 nor LibreOffice_5.2.0.2_Linux_x86-64 - thus this a regression.

This is a particular problem if dark text was placed over the image, the text is no longer readable.

Tested using a clean libreoffice configuration. Occurs in both Writer and Impress to PDF export.

I flagged the priority to high due to the regression nature of the bug not because I imagine many users are impacted.
Comment 1 Tomaz Vajngerl 2016-07-10 13:28:00 UTC
Example document please...
Comment 2 Sean Carlos 2016-07-10 13:30:47 UTC
Created attachment 126151 [details]
Simple document containing an image where the transparency percentage is set.
Comment 3 Buovjaga 2016-07-17 09:14:29 UTC
Yup.

64-bit, KDE Plasma 5
Build ID: 5.1.4.2 Arch Linux build-1
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab1b351840160655a9f0caedbb35e9fdf203c5a0
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on July 16th 2016
Comment 4 Caolán McNamara 2016-07-22 13:58:55 UTC
regression from...

commit 76ec54e8c9f3580450bca85236a4f5af0c328588
Author: Michael Meeks <michael.meeks@collabora.com>
Date:   Mon Feb 8 14:24:15 2016 +0000

    tdf#97662 - Try to preserve original compressed JPEGs harder.
Comment 5 Michael Meeks 2016-07-22 14:18:12 UTC
Yep; it's on Laszlos radar =) thanks.
Comment 6 Caolán McNamara 2016-07-22 14:46:48 UTC
Even before this change, setting Lossless compression + unticking reduce image resolution resulted in missing transparency too
Comment 7 Commit Notification 2016-07-22 15:47:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c72db36c7c791b1f92d3dd29fbc40c8ef168c609

Resolves: tdf#100838 no transparency support on using original jpg data path

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2016-07-22 15:51:23 UTC
That seems to work.
Comment 9 Cor Nouws 2016-07-23 22:00:02 UTC
same or related issue as https://bugs.documentfoundation.org/show_bug.cgi?id=99723 ?
will try to test a daily soon
Comment 10 Commit Notification 2016-07-25 07:38:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c04534c4a9272d3b35c619d18edb34ef16e63f2&h=libreoffice-5-2

Resolves: tdf#100838 no transparency support on using original jpg data path

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Cor Nouws 2016-07-29 13:32:31 UTC
(In reply to Cor Nouws from comment #9)
> same or related issue as
> https://bugs.documentfoundation.org/show_bug.cgi?id=99723 ?
> will try to test a daily soon

Not the same bug as 99723 - that one still exists in Version: 5.3.0.0.alpha0+
Build ID: e9915cbf4f29bc79360c6c6148405b4490bf90e4