Resolves: tdf#100838 no transparency support on using original jpg data path

This became a problem since...

commit 76ec54e8c9f3580450bca85236a4f5af0c328588
Author: Michael Meeks <michael.meeks@collabora.com>
Date:   Mon Feb 8 14:24:15 2016 +0000

    tdf#97662 - Try to preserve original compressed JPEGs harder.

    Avoiding de-compressing and re-compressing them saves lots of time too.

for the default JPEG Compress + Reduce Image resolution case

but appears to always be a problem with the Lossless - Reduce Image resolution
case.

Change-Id: I24c69a59a16d69817e402cd87f84e744ee146a66